# SuperSimpleDB

./: DOCS.md  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: workflow.yml
Database/scoped/: Version.json
scopedb/: __init__.py  main.py
scopedb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ssdb/: __init__.py  main.py
ssdb.egg-info/: PKG-INFO  SOURCES.txt
test/: main.py
test/Database/globals/: App_Name.json  Version.json
